style: Links and formatting

--- a/Journals/yosevu/journal/01-19-2018.md
+++ b/Journals/yosevu/journal/01-19-2018.md
@@ -1,6 +1,6 @@
 # Learn to Fish 
 
-*January 12, 2018*
+*January 19, 2018*
 
 My first first week at Sparkbox was fantastic. It was easily the most memorable first week I've ever had at a job. The onboarding was smooth and organized and I really appreciated the chance to meet and interact with a lot different people throughout the day, during lunch, and at the special late afternoon dessert!
 
@@ -8,9 +8,9 @@ Seeing the whole organization drawn out on the wall was really helpful to get an
 
 I spent the end of Week 1 and the majority of Week 2 setting up my computer, reading, journaling, and exploring Git and GitHub. I also spent some time thinking about and planning when and how I will work on the apprenticship curriculum. One thing that is important to me is to track what I am doing with my time and hold myself accountable for my learning. I am setting curriculum and personal goals at the beginning of each week and tracking them. Finally, I'm starting a *Today I Learned* section to help reinforce the small things and details of what I am learning every day.
 
-* [Goals (12/15)](goals.md)
+* [Goals (12/15)](../goals.md)
 
-* [Today I Learned](today-i-learned/january.md)
+* [Today I Learned](../today-i-learned/january.md)
 
 ---
 
