feat: Add 2018-01-26 journal

--- a/Journals/yosevu/journal/01-19-2018.md
+++ b/Journals/yosevu/journal/01-19-2018.md
@@ -1,4 +1,4 @@
-# Learn to Fish 
+# *Learn to fish* 
 
 *January 19, 2018*
 
@@ -16,7 +16,7 @@ I spent the end of Week 1 and the majority of Week 2 setting up my computer, rea
 
 ## Reading
 
-> Give a man a fish; feed him for a day. Teach a man to fish; feed him for a lifetime." &mdash; [Anne Isabella Thackeray Ritchie](https://quoteinvestigator.com/2015/08/28/fish/)
+> Give a man a fish; feed him for a day. Teach a man to fish; feed him for a lifetime. &mdash; [Anne Isabella Thackeray Ritchie](https://quoteinvestigator.com/2015/08/28/fish/)
 
 I am about halfway through *The Passionate Programmer*. *Part III: Execution* is my favorite section so far with *Tip 11: Learn to Fish* resonated with me in particular. I think the principle conveyed in the in the learn-to-fish proverb is an important frame for thinking about learning: The purpose is ultimately to be able to do something yourself. This is apparently obvious, but I think understanding how the pieces of the puzzle fit together in a larger system is an important reminder for self-suffiency.
 
