fix: relative file links

--- a/Journals/yosevu/journal/01-19-2018.md
+++ b/Journals/yosevu/journal/01-19-2018.md
@@ -10,7 +10,7 @@ I spent the end of Week 1 and the majority of Week 2 setting up my computer, rea
 
 * [Goals (12/15)](../goals.md)
 
-* [Today I Learned](../today-i-learned/january.md)
+* [Today I Learned](../january.md)
 
 ---
 
