fix: relative file links

--- a/Journals/yosevu/journal/01-26-2018.md
+++ b/Journals/yosevu/journal/01-26-2018.md
@@ -4,7 +4,7 @@
 
 * [Goals (5/7)](../goals.md)
 
-* [Today I Learned](../january.md)
+* [Today I Learned](../today-i-learned/january.md)
 
 Week 3 was a very exciting week. We started our first collaborative project building a hot dog stand command line app. The primary objective is to learn object-oriented programming (OOP) principles through practice using them to build a command-line program.
 
