fix: relative links in journals

--- a/Journals/yosevu/journal/01-19-2018.md
+++ b/Journals/yosevu/journal/01-19-2018.md
@@ -2,15 +2,17 @@
 
 *January 19, 2018*
 
+* [Goals (5/7)](https://github.com/DevMaterial/my-life-on-weekdays/blob/yosevu-format-journal/Journals/yosevu/goals.md)
+
+* [Today I Learned](https://github.com/DevMaterial/my-life-on-weekdays/blob/yosevu-format-journal/Journals/yosevu/today-i-learned/january.md)
+
 My first first week at Sparkbox was fantastic. It was easily the most memorable first week I've ever had at a job. The onboarding was smooth and organized and I really appreciated the chance to meet and interact with a lot different people throughout the day, during lunch, and at the special late afternoon dessert!
 
 Seeing the whole organization drawn out on the wall was really helpful to get an overview of the different people at Sparkbox and their roles. I also _really_ dig the vibe of office space and the varied work environments. It makes it very comfortable to be able to move around depending on what you are working on, who you are working with, or what you feel like.
 
 I spent the end of Week 1 and the majority of Week 2 setting up my computer, reading, journaling, and exploring Git and GitHub. I also spent some time thinking about and planning when and how I will work on the apprenticship curriculum. One thing that is important to me is to track what I am doing with my time and hold myself accountable for my learning. I am setting curriculum and personal goals at the beginning of each week and tracking them. Finally, I'm starting a *Today I Learned* section to help reinforce the small things and details of what I am learning every day.
 
-* [Goals (12/15)](../goals.md)
 
-* [Today I Learned](../today-i-learned/january.md)
 
 ---
 
